--- a/Appointments.html
+++ b/Appointments.html
@@ -248,9 +248,9 @@
             </div>
             <div class="p-4">
 
-                <a class="navbar-brand bg-white" href="index.html" style="margin-left:-22px;">
-                    <img src="https://maieden.com/img/logo.png" height="50" alt="mdb logo" />
-                </a>
+                <a class="navbar-brand" href="index.html">
+                <img src="img/logo.png" height="50" alt="logo" />
+            </a>
                 <ul class="list-unstyled components mb-5" id="NavSection">
                     <li>
                         <a href="index.html"><span class="fas fa-tachometer-alt fa-fw me-3 mr-3"></span> Main dashboard</a>
