--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
             </div>
             <div class="p-4">
                
-                <a class="navbar-brand bg-white" href="index.html" style="margin-left:-22px;">
-                    <img src="https://maieden.com/img/logo.png" height="50" alt="mdb logo" />
+                <a class="navbar-brand" href="index.html">
+                    <img src="img/logo.png" height="50" alt="logo" />
                 </a>
                 <ul class="list-unstyled components mb-5" id="NavSection">
                     <li >
