--- a/locations.html
+++ b/locations.html
@@ -69,8 +69,8 @@
                     <i class="fas fa-bars"></i>
                 </button>
 
-                <a class="navbar-brand bg-white" href="index.html">
-                    <img src="https://maieden.com/img/logo.png" height="50" alt="mdb logo" />
+                <a class="navbar-brand" href="index.html">
+                    <img src="img/logo.png" height="50" alt="logo" />
                 </a>
 
                 <form class="mx-2 my-auto d-inline w-100">
