--- a/Appointments.html
+++ b/Appointments.html
@@ -10,7 +10,7 @@
     <link href="css/style.min.css" rel="stylesheet" />
     <link href="css/dashboard.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.css" rel="stylesheet" />
-    <title>Appointsments</title>
+    <title>Appointments</title>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css'>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.4/css/tether.min.css'>
